[FIX] mdc.FilterBar: Preserve whitespaces for labels
Certain languages such as French and Chinese, append a space before a colon or visualise colons differently.
Previously, by default spaces at the beginning or end were collapsed leading to an incorrect representation. Therefore, white-space-collapse has been introduced to preserve them.

SNOW: DINC0570188

--- a/src/sap.ui.mdc/src/sap/ui/mdc/themes/base/FilterBar.less
+++ b/src/sap.ui.mdc/src/sap/ui/mdc/themes/base/FilterBar.less
@@ -35,6 +35,7 @@
 
 .sapUiMdcFilterBarBase .sapUiMdcFilterBarBaseLabel .sapMLabelColonAndRequired::before {
 	content: attr(data-colon);
+	white-space-collapse: preserve;
 }
 
 html[dir='rtl'] .sapUiMdcFilterBarBaseFloatRight {
